@@ -21,7 +21,7 @@ import java.util.*;
  <li>John Koza's three  problems (quartic, quintic, and sextic, drawn from his GP-1 and GP-2 books.  These are known as <b>koza-1</b> through <b>koza-3</b>
  <li>Twelve problems drawn from "Semantically-based Crossover in Genetic Programming: Application to Real-valued Symbolic Regression" (GPEM 2011),
  by Nguyen Quang Uy, Nguyen Xuan Hoai, Michael O’Neill, R.I. McKay, Edgar Galv ́an-L ́opez.  These are known as
- <b>nguyen-1</b> through <b>nguyen-12</b>
+ <b>nguyen-1</b> through <b>nguyen-10</b>
  <li>Fifteen problems drawn from "Accuracy in Symbolic Regression" (GPEM 2011), by Michael Korns.  These are known as <b>KORNS1</b> through <b>KORNS15</b>
  <li>Fifteen problems drawn from "Improving Symbolic Regression with Interval Arithmetic and Linear Scaling" (EuroGP 2003), by Maarten Keijzer.  These are known as <b>keijzer-1</b> through <b>keijzer-15</b>
  <li>Fifteen problems drawn from "Order of Nonlinearity as a Complexity Measure for Models Generated by Symbolic Regression via Pareto Genetic Programming" (IEEE TransEC 13:2), by Ekaterina J. Vladislavleva, Guido F. Smits, and Dick den Hertog.  These are known as <b>vladislavleva-1</b> through <b>vladislavleva-8</b>
@@ -74,59 +74,57 @@ public class Benchmarks extends GPProblem implements SimpleProblemForm
     public static final int NGUYEN8 = 10 ;
     public static final int NGUYEN9 = 11 ;
     public static final int NGUYEN10 = 12 ;
-    public static final int NGUYEN11 = 13 ;
-    public static final int NGUYEN12 = 14 ;
     
     // From Pagie and Hogeweg 1997: Ludo Pagie, Paulien Hogeweg: Evolutionary Consequences of Coevolving
     // Targets. Evolutionary Computation 5(4): 401-418 (1997).
-    public static final int PAGIE1 = 15;        // 2D
-    public static final int PAGIE2 = 16;        // 3D
+    public static final int PAGIE1 = 13;        // 2D
+    public static final int PAGIE2 = 14;        // 3D
         
     // From Accuracy in Symbolic Regression -- GPTP 2011
-    public static final int KORNS1 = 17 ;
-    public static final int KORNS2 = 18 ;
-    public static final int KORNS3 = 19 ;
-    public static final int KORNS4 = 20 ;
-    public static final int KORNS5 = 21 ;
-    public static final int KORNS6 = 22 ;
-    public static final int KORNS7 = 23 ;
-    public static final int KORNS8 = 24 ;
-    public static final int KORNS9 = 25 ;
-    public static final int KORNS10 = 26 ;
-    public static final int KORNS11 = 27 ;
-    public static final int KORNS12 = 28 ;
-    public static final int KORNS13 = 29 ;
-    public static final int KORNS14 = 30 ;
-    public static final int KORNS15 = 31 ;
+    public static final int KORNS1 = 15 ;
+    public static final int KORNS2 = 16 ;
+    public static final int KORNS3 = 17 ;
+    public static final int KORNS4 = 18 ;
+    public static final int KORNS5 = 19 ;
+    public static final int KORNS6 = 20 ;
+    public static final int KORNS7 = 21 ;
+    public static final int KORNS8 = 22 ;
+    public static final int KORNS9 = 23 ;
+    public static final int KORNS10 = 24 ;
+    public static final int KORNS11 = 25 ;
+    public static final int KORNS12 = 26 ;
+    public static final int KORNS13 = 27 ;
+    public static final int KORNS14 = 28 ;
+    public static final int KORNS15 = 29 ;
         
     // From Improving Symbolic Regression with Interval Arithmetic and Linear Scaling
     // Maarten Keijzer -- EuroGP 2003
-    public static final int KEIJZER1 = 32 ;
-    public static final int KEIJZER2 = 33 ;
-    public static final int KEIJZER3 = 34 ;
-    public static final int KEIJZER4 = 35 ;
-    public static final int KEIJZER5 = 36 ;
-    public static final int KEIJZER6 = 37 ;
-    public static final int KEIJZER7 = 38 ;                         
-    public static final int KEIJZER8 = 39 ;
-    public static final int KEIJZER9 = 40 ;
-    public static final int KEIJZER10 = 41 ;
-    public static final int KEIJZER11 = 42 ;
-    public static final int KEIJZER12 = 43 ;
-    public static final int KEIJZER13 = 44 ;
-    public static final int KEIJZER14 = 45 ;
-    public static final int KEIJZER15 = 46 ;
+    public static final int KEIJZER1 = 30 ;
+    public static final int KEIJZER2 = 31 ;
+    public static final int KEIJZER3 = 32 ;
+    public static final int KEIJZER4 = 33 ;
+    public static final int KEIJZER5 = 34 ;
+    public static final int KEIJZER6 = 35 ;
+    public static final int KEIJZER7 = 36 ;                         
+    public static final int KEIJZER8 = 37 ;
+    public static final int KEIJZER9 = 38 ;
+    public static final int KEIJZER10 = 39 ;
+    public static final int KEIJZER11 = 40 ;
+    public static final int KEIJZER12 = 41 ;
+    public static final int KEIJZER13 = 42 ;
+    public static final int KEIJZER14 = 43 ;
+    public static final int KEIJZER15 = 44 ;
         
     // From Order of Nonlinearity as a Complexity Measure for Models Generated by Symbolic Regression via Pareto Genetic Programming
     // Ekaterina J. Vladislavleva, Guido F. Smits, and Dick den Hertog
-    public static final int VLADISLAVLEVA1 = 47 ;
-    public static final int VLADISLAVLEVA2 = 48 ;
-    public static final int VLADISLAVLEVA3 = 49 ;
-    public static final int VLADISLAVLEVA4 = 50 ;
-    public static final int VLADISLAVLEVA5 = 51 ;
-    public static final int VLADISLAVLEVA6 = 52 ;                           
-    public static final int VLADISLAVLEVA7 = 53 ;
-    public static final int VLADISLAVLEVA8 = 54 ;
+    public static final int VLADISLAVLEVA1 = 45 ;
+    public static final int VLADISLAVLEVA2 = 46 ;
+    public static final int VLADISLAVLEVA3 = 47 ;
+    public static final int VLADISLAVLEVA4 = 48 ;
+    public static final int VLADISLAVLEVA5 = 49 ;
+    public static final int VLADISLAVLEVA6 = 50 ;                           
+    public static final int VLADISLAVLEVA7 = 51 ;
+    public static final int VLADISLAVLEVA8 = 52 ;
 
         
         
@@ -135,7 +133,7 @@ public class Benchmarks extends GPProblem implements SimpleProblemForm
     public static final String names[] = 
         { 
         "koza-1", "koza-2", "koza-3",
-        "nguyen-1", "nguyen-2", "nguyen-3", "nguyen-4", "nguyen-5", "nguyen-6", "nguyen-7", "nguyen-8", "nguyen-9", "nguyen-10", "nguyen-11", "nguyen-12",
+        "nguyen-1", "nguyen-2", "nguyen-3", "nguyen-4", "nguyen-5", "nguyen-6", "nguyen-7", "nguyen-8", "nguyen-9", "nguyen-10",
         "pagie-1", "pagie-2",
         "korns-1", "korns-2", "korns-3", "korns-4", "korns-5", "korns-6", "korns-7", "korns-8", "korns-9", "korns-10", "korns-11", "korns-12", "korns-13", "korns-14", "korns-15",
         "keijzer-1", "keijzer-2", "keijzer-3", "keijzer-4", "keijzer-5", "keijzer-6", "keijzer-7", "keijzer-8", "keijzer-9", "keijzer-10", "keijzer-11", "keijzer-12", "keijzer-13", "keijzer-14", "keijzer-15", 
@@ -147,7 +145,7 @@ public class Benchmarks extends GPProblem implements SimpleProblemForm
     public static final String fs[] = 
         {
         "koza1", "koza1", "koza1",
-        "koza1", "koza1", "koza1", "koza1", "koza1", "koza1", "koza1", "koza1", "koza2", "koza2", "koza2", "koza2",
+        "koza1", "koza1", "koza1", "koza1", "koza1", "koza1", "koza1", "koza1", "koza2", "koza2",
         "koza2", "koza3",
         "korns5", "korns5", "korns5", "korns5", "korns5", "korns5", "korns5", "korns5", "korns5", "korns5", "korns5", "korns5", "korns5", "korns5", "korns5", 
         "keijzer1", "keijzer1", "keijzer1"/* revised from GECCO paper */,  "keijzer1", "keijzer3", "keijzer1", "keijzer1", "keijzer1", "keijzer1", "keijzer2", "keijzer2", "keijzer2", "keijzer2", "keijzer2", "keijzer2",
@@ -267,8 +265,6 @@ public class Benchmarks extends GPProblem implements SimpleProblemForm
 
             case NGUYEN9:
             case NGUYEN10:
-            case NGUYEN11:
-            case NGUYEN12:
                 return generateRandomSamples(state, new double[] { 0, 0 }, new double[] { 1, 1 }, 100, threadnum);
                         
             case PAGIE1:
@@ -379,8 +375,6 @@ public class Benchmarks extends GPProblem implements SimpleProblemForm
             case NGUYEN8:
             case NGUYEN9:
             case NGUYEN10:
-            case NGUYEN11:
-            case NGUYEN12:
                 return trainpoints;
                 
             case PAGIE1:
@@ -508,10 +502,10 @@ public class Benchmarks extends GPProblem implements SimpleProblemForm
                 return Math.sin(x) + Math.sin(y*y);
             case NGUYEN10:
                 return 2 * Math.sin(x) * Math.cos(y);
-            case NGUYEN11:
-                return Math.pow(x, y);
-            case NGUYEN12:
-                return x*x*x*x - x*x*x + (y*y)/2.0 - y;
+            //case NGUYEN11:
+            //    return Math.pow(x, y);
+            //case NGUYEN12:
+            //    return x*x*x*x - x*x*x + (y*y)/2.0 - y;
             case PAGIE1:
                 // otherwise known as 1 / (1 + Math.pow(x, -4)) + 1 / (1 + Math.pow(y, -4))
                 return 1.0 / (1.0 + 1.0 / (x * x * x * x)) + 1.0 / (1.0 + 1.0 / (y * y * y * y)); 
@@ -571,7 +565,7 @@ public class Benchmarks extends GPProblem implements SimpleProblemForm
             case KEIJZER9:
                 return asinh(x);   // Not a function in Math
             case KEIJZER10:
-                return Math.pow(x, y);  // same as NGUYEN11
+                return Math.pow(x, y);
             case KEIJZER11:
                 return x * y + Math.sin((x - 1.0) * (y - 1.0));
             case KEIJZER12:
